--- a/CSBackgroundAndMotivation.tex
+++ b/CSBackgroundAndMotivation.tex
@@ -38,8 +38,7 @@
     \subsection{Crash Simulation}
 
         Once CrashSimulator has generated a series of potential faults from its analysis of an application's system call
-        trace the process of verifying the presence of faults can begin. Verification handled by running an instance of
-        the application and injecting one of the potential faults identified during the analysis step.  The results of
-        this faulty execution are monitored and any deviations in output from the ``correct'' output are recorded.
+        trace the process of verifying the presence of faults can begin. Verification is handled by running an instance
+        of the application and injecting one of the potential faults identified during the analysis step.  The results
+        of this faulty execution are monitored and any deviations in output from the ``correct'' output are recorded.
         Faults that result in an application crashing are also recorded.
-
