--- a/CSIntro.tex
+++ b/CSIntro.tex
@@ -4,7 +4,7 @@
 
     One major hurdle in developing robust applications is anticipating and dealing with edge conditions and faults that
     compromise and applications ability to run as intended. A common source of faults is the environment in which an
-    application runs. In an increasingly diverse software ecosystem it is not uncommon for breaking differences to
+    application runs. In an increasingly diverse software ecosystem it is not uncommon for problematic differences to
     appear between two different platforms. Whether it happens because of a lack of adherence to standards, intentional
     divergence, or developer error the result is the same: software written to run on multiple platforms falls victim to
     the differences between those platforms. These can easily go unnoticed due to the infeasibility of testing software
@@ -15,7 +15,7 @@
     hardware and software systems that can make up the environment.
 
     This problem is of particular concern in the context of today's highly network dependent applications. With the
-    explosion of mobile computing and software as a service products applications that are completely reliant on
+    explosion of mobile computing and ``software as a service'' products applications that are completely reliant on
     well-behaved network communication are increasingly common. As a result a great deal of emphasis must be placed on
     properly dealing with faults in these network communications. Unfortunately, identifying these faults is difficult
     due to the inability of the developer to replicate all possible application environments and exhaust all possible
