Updated title information

--- a/CrashSimulator.tex
+++ b/CrashSimulator.tex
@@ -1,4 +1,3 @@
-% TODO: Template: Fix the title information
 %% This style is provided for the ICSE 2015 main conference,
 %% ICSE 2015 co-located events, and ICSE 2015 workshops.
 
@@ -355,7 +354,7 @@
 %
 % paper title
 % can use linebreaks \\ within to get better formatting as desired
-\title{Bare Demo of IEEEtran.cls for ICSE'15 and Workshops}
+\title{Identifying faults with CrashSimulator}
 
 
 % author names and affiliations
@@ -391,13 +390,9 @@ Homer Simpson\IEEEauthorrefmark{2},
 James Kirk\IEEEauthorrefmark{3},
 Montgomery Scott\IEEEauthorrefmark{3} and
 Eldon Tyrell\IEEEauthorrefmark{4}}
-\IEEEauthorblockA{\IEEEauthorrefmark{1}Fake School\\
-Fake University,
-Atlanta, Georgia 30332--0250\\ Email: see http://www.michaelshell.org/contact.html}
-\IEEEauthorblockA{\IEEEauthorrefmark{2}Twentieth Century Fox, Springfield, USA\\
-Email: homer@thesimpsons.com}
-\IEEEauthorblockA{\IEEEauthorrefmark{3}Starfleet Academy, San Francisco, California 96678--2391\\
-Telephone: (800) 555--1212, Fax: (888) 555--1212}
+\IEEEauthorblockA{\IEEEauthorrefmark{1}Polytechnic School of Engineering\\
+New York University,
+New York, New York 11201\\ Email: \textbf{FAKE@EMAIL.com}}
 }
 
 
