Reworked abstract based on discussion

--- a/CSAbstract.tex
+++ b/CSAbstract.tex
@@ -1,4 +1,3 @@
-% TODO: Re-read and rework
 \begin{abstract}
 
     One of the challenges of software development is anticipating and dealing with the variety of environments in which
@@ -7,14 +6,14 @@
     latency into network communications. This paper introduces CrashSimulator, a tool designed to determine whether or
     not an application can handle these unanticipated conditions.  CrashSimulator accomplishes this in three steps.
     First, it analyzes a system call trace of an application collected using a utility like \emph{strace} in order to
-    identify a set of system calls that are commonly mishandled by developers. Next, it injects faults into the running
-    application at the previously identified points by using \emph{ptrace}. Finally, it observes whether or not the
-    application continued to operate normally after the encountering the error and reports its findings to the
-    developer. As a result, the developer is made aware of deficiencies in the application without having to go through
-    a potentially complex and costly deployment or beta test scenario. Because CrashSimulator operates using black-box
-    analysis utilities it does not require access to an application's source code.  CrashSimulator was used to analyze
-    \emph{<<somenumber>>} commonly used open and closed source applications.  Its findings were compared to tickets
-    listed in the bug tracking suites of these applications.  It was able to successfully identify \emph{<<somenumber>>}
-    of bugs listed in these suites and \emph{<<someothernumber>>} of bugs that had not yet been discovered.
+    identify areas where anomalies could potentially be injected. Next, it produces a new system call trace with the
+    anomalies present. It then evaluates whether or not the application properly handles the anomaly replaying the
+    mutated system call trace. Finally, it observes whether or not the application continued to operate normally after
+    the encountering the anomaly and reports its findings to the developer. As a result, the developer is made aware of
+    deficiencies in the application without having to deploy the application to other environments for the purpose of
+    testing. CrashSimulator was used to analyze \emph{<<somenumber>>} commonly used open and closed source applications.
+    Its findings were compared to tickets listed in the bug tracking suites of these applications.  It was able to
+    successfully identify \emph{<<somenumber>>} of bugs listed in these suites and \emph{<<someothernumber>>} of bugs
+    that had not yet been discovered.
 
 \end{abstract}
