Added architecture diagram

--- a/CSApproachDetails.tex
+++ b/CSApproachDetails.tex
@@ -1,10 +1,12 @@
-% TODO: Do a diagram that explains the architecture of the system
 % TODO: rework architecture to talk more about NetCheck
+% TODO: Verify information on supported trace formats
 
 \section{CrashSimulator Approach Details}
 
-    % TODO: Verify information on supported trace formats
-    % TODO: Assume all program are deterministic and will end. Unit test individual functions by putting in script
+    \begin{figure}[h]
+        \center{}
+        \includegraphics[scale=.5]{Architecture}
+    \end{figure}
 
     \subsection{Architecture}
 
