--- a/CrashSimulator.tex
+++ b/CrashSimulator.tex
@@ -67,6 +67,7 @@
 \usepackage{multirow}
 \usepackage{tabu}
 \usepackage{float}
+\usepackage{graphicx}
 %
 % If IEEEtran.cls has not been installed into the LaTeX system files,
 % manually specify the path to it like:
