Reworded sentence regarding supported trace tools

--- a/CSApproachDetails.tex
+++ b/CSApproachDetails.tex
@@ -62,7 +62,7 @@
         similar testing tools focus on testing the logic within the application under test which missing faults that
         only appear when the application is run in an imperfect, real world environment.
 
-        Because CrashSimulator's trace analysis engine is based on prior work from the NetCheck supported trace
+        Because this implementation of CrashSimulator uses NetCheck for system call trace analysis, supported trace
         gathering tools include \emph{strace} on Linux and \emph{dtrace} on OS X.
 
     \subsection{Potential Deviations}
